<resources>
    <string name="app_name" translatable="false">Reverie</string>
    <string name="all_diaries">All Diaries</string>
    <string name="diary">Diary</string>
    <string name="time_capsule">Time Capsule</string>
    <string name="navigation_drawer" translatable="false">Menu</string>
    <string name="account" translatable="false">Account</string>
    <string name="email" translatable="false">Email</string>
    <string name="username" translatable="false">Username</string>
    <string name="password" translatable="false">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login" translatable="false">Login</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="signup" translatable="false">Signup</string>
    <string name="title">Title</string>
    <string name="page">Page</string>
    <string name="sub_page">Sub Page</string>
    <string name="day">Day</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="new_diary">New Diary</string>
    <string name="create">Create</string>
    <string name="save">Save</string>
    <string name="create_diary_message">You are creating your diary!</string>
    <string name="edit_diary_page_message">You are editing your diary!</string>
    <string name="create_diary">Create diary</string>
    <string name="edit_diary_message">You are editing your diary!</string>
    <string name="create_time_capsule_message">You are creating your time capsule!</string>
    <string name="content">Content</string>
    <string name="description">Description</string>
    <string name="your_profile">Your profile</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="edit_profile">Edit profile</string>
    <string name="email_mandatory">Email is mandatory</string>
    <string name="username_mandatory">Username is mandatory</string>
    <string name="name_mandatory">Name is mandatory</string>
    <string name="surname_mandatory">Surname is mandatory</string>
    <string name="title_mandatory">Title is mandatory</string>
    <string name="content_mandatory">Content is mandatory</string>
    <string name="description_mandatory">Description is mandatory</string>
    <string name="password_mandatory">Password is mandatory</string>
    <string name="passwords_dont_match">The two passwords don\'t match</string>
    <string name="password_length">Password needs to have at least 8 characters</string>
    <string name="username_length">Username needs to have at least 3 characters</string>
    <string name="send_reset_password_email">Send reset password email</string>
    <string name="go_back_to_login">Go back to login</string>
    <string name="reset_password" translatable="false">Reset password</string>
    <string name="reset_password_email_sent">Reset password email sent</string>
    <string name="reset_password_email_error">Error sending reset password email</string>
    <string name="go_to_signup">You don\'t have an account? Signup</string>
    <string name="forgot_password">You forgot your password?</string>
    <string name="already_have_account">Do you already have an account? Login</string>
    <string name="signup_successful">Signup successful. Go back to login</string>
    <string name="signup_error">Signup error</string>
    <string name="login_error">Login error</string>
    <string name="no_date_selected">No date selected</string>
    <string name="date">Date</string>
    <string name="select_date">Select date</string>
    <string name="error">Error</string>
    <string name="username_already_taken">Username already taken</string>
    <string name="email_already_taken">Email already taken</string>
    <string name="select_a_date">Select a date</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="save_changes">Save changes</string>
    <string name="update_error">Update error</string>
    <string name="confirm_diary_deletion">Confirm diary deletion</string>
    <string name="confirm_capsule_deletion">Confirm capsule deletion</string>
    <string name="delete_diary">Are you sure you want to delete this diary? This action cannot be undone.</string>
    <string name="delete_capsule">Are you sure you want to delete this capsule? This action cannot be undone.</string>
    <string name="confirm_page_deletion">confirm page deletion</string>
    <string name="delete_page">are you sure you want to delete this page? this action cannot be undone.</string>
    <string name="move_prev_subpage">Move to prev subpage</string>
    <string name="move_next_subpage">Move to next subpage</string>
    <string name="receiver_mandatory">At least one receiver is needed</string>
    <string name="deadline_mandatory">Deadline is mandatory</string>
    <string name="missing_phone_prefix">Number not valid, add the prefix (e.g. +39)</string>
    <string name="phone_number_not_valid">Number not valid</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_number_already_selected">Phone number already selected</string>
    <string name="email_already_selected">Email already selected</string>
    <string name="edit_diary">Edit diary</string>
    <string name="select_image">Select image</string>
    <string name="arrival_date">Arrival date</string>
    <string name="creation_date">Creation date</string>
    <string name="receiver">Receiver</string>
    <string name="receivers">Receivers</string>
    <string name="sender">Sender</string>
    <string name="content_not_available">Content not available</string>
    <string name="letter_content">Letter content</string>
    <string name="profile">Profile</string>
    <string name="page_number">Page number</string>
    <string name="create_time_capsule">Create time capsule</string>
    <string name="letter_for_the_future">Letter for the future</string>
    <string name="letter_for_the_future_description">This letter is to send a message into the future</string>
    <string name="created_on">Created on</string>
    <string name="arriving_on">Arriving on</string>
    <string name="arrived_on">Arrived on</string>
    <string name="edit_diary_page">Edit diary page</string>
    <string name="add">Add</string>
    <string name="enter_phone_number">Enter a phone number</string>
    <string name="enter_email">Enter an email</string>
    <string name="info">Info</string>
    <string name="images">Images</string>
    <string name="scheduled">Scheduled</string>
    <string name="sent">Sent</string>
    <string name="received">Received</string>
    <string name="image">Image</string>
    <string name="create_first_diary">Create your first diary!</string>
</resources>